2005-11-13 Konstantin Triger <kostat@mainsoft.com>

        * Graphics.jvm.cs, Pen.jvm.cs, AdvancedStroke.jvm.cs:
                Differentiate standard and AntiAlias stroking

2005-11-10 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Graphics.jvm.cs: added UnitConversion property
	* FontFamily.jvm.cs: refactoring
	* Font.jvm.cs: refactoring

2005-11-03  Peter Dennis Bartok  <pbartok@novell.com>

	* Font.cs: 
	  - Implemented serialization constructor
	  - Implemented GetObjectData()

2005-11-01 Vladimir Krasnov <vladimirk@mainsoft.com>

	* StringFormat.jvm.cs: Refactoring

2005-10-31 Jordi Mas i Hernandez <jordi@ximian.com> 

	* Image.cs: Default format for MemoryBMP should be Png

2005-10-27 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Bitmap.jvm.cs: fixed InternalSave
	* Image.jvm.cs: fixed Save

2005-10-27 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Image.jvm.cs: fixed redolution properties

2005-10-27 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Bitmap.jvm.cs: fixed InternalSave, to remove alpha channel of saved jpeg
	fixed clone, Initialize

2005-10-24  Peter Dennis Bartok  <pbartok@novell.com>

	* Brush.cs: Don't delete the brush if the display handle is no longer
	  valid, otherwise cairo will try to use the handle and crash and burn

2005-10-23 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Graphics.jvm.cs: DrawImage refactoring

2005-10-23 Vladimir Krasnov <vladimirk@mainsoft.com>

	* Graphics.jvm.cs: Clipping refactoring
	fixed FillScaledShape, DrawShape, MeasureDraw, BeginContainer, 
	ExcludeClip, IntersectClip, ResetClip, CombineClipArea, RestoreBaseClip,
	TranslateClip, VisibleClipBounds

2005-10-21  Miguel de Icaza  <miguel@novell.com>

	* Pen.cs: Add support for returning the Brush from Pens created
	with a color constructor.

	Plus: code style police, else does not go on its own line.

	* Graphics.cs: Add various ArgumentNull checks.

2005-10-20 Konstantin Triger <kostat@mainsoft.com>

        * Image.jvm.cs: make Clone abstract
